--- a/.github/workflows/allinone.yml
+++ b/.github/workflows/allinone.yml
@@ -22,9 +22,9 @@ jobs:
       run: |
         sudo curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp
         sudo chmod a+rx /usr/local/bin/yt-dlp
-    # - name: Install PyExecJS
-    #   run: |
-    #     pip install PyExecJS
+    - name: Install PyExecJS
+      run: |
+        pip install PyExecJS
     # - name: Install streamlink
     #   run: |
     #     pip install streamlink
