--- a/.github/workflows/allinone.yml
+++ b/.github/workflows/allinone.yml
@@ -322,15 +322,25 @@ jobs:
 
 ############################################################################################################
 ############################################Douyu鬥魚##############################################################
-#名偵探柯南
-    - name: Get douyu_Conan.m3u8
+#名偵探柯南1
+    - name: Get douyu_Conan1.m3u8
       run: |
-        touch ./douyu_Conan.m3u8
-        sudo cat >./douyu_Conan.m3u8 <<EOL
+        touch ./douyu_Conan1.m3u8
+        sudo cat >./douyu_Conan1.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(python3 ./douyu.py 6484910)
+        EOL
+#名偵探柯南2
+    - name: Get douyu_Conan2.m3u8
+      run: |
+        touch ./douyu_Conan2.m3u8
+        sudo cat >./douyu_Conan2.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        $(python3 ./douyu.py 1487654)
         EOL
 #running man1
     - name: Get douyu_running_man1.m3u8
