--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,17 @@ jobs:
     - name: Install streamlink
       run: |
         pip install streamlink
+    - name: Install OpenVPN
+      run: |
+          sudo apt update
+          sudo apt install -y openvpn openvpn-systemd-resolved
+    - name: OpenVPN-Connect
+      uses: kota65535/github-openvpn-connect-action@v2.0.2
+      with:
+        config_file: .github/workflows/client.ovpn
+        username: ${{ secrets.OVPN_USERNAME }}
+        password: ${{ secrets.OVPN_PASSWORD }}
+        client_key: ${{ secrets.USER_KEY }}
 ###########################################################################################   
 #test
     - name: Get test.txt
