--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,13 @@ jobs:
     - name: Install streamlink
       run: |
         pip install streamlink
+    - name: novpn
+      run: |
+        touch ./ip.txt
+        sudo cat >./test.txt <<EOL
+        $(curl ifconfig.me)
+        EOL
+        
     - name: Install OpenVPN
       run: |
           sudo apt update
@@ -39,6 +46,13 @@ jobs:
         username: ${{ secrets.OVPN_USERNAME }}
         password: ${{ secrets.OVPN_PASSWORD }}
         client_key: ${{ secrets.USER_KEY }}
+    - name: yvpn
+      run: |
+        touch ./ip.txt
+        sudo cat >./test.txt <<EOF
+        old____________________________________
+        $(curl ifconfig.me)
+        EOF
 ###########################################################################################   
 #test
     - name: Get test.txt
