--- a/.github/workflows/allinone.yml
+++ b/.github/workflows/allinone.yml
@@ -22,12 +22,7 @@ jobs:
       run: |
         sudo curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp
         sudo chmod a+rx /usr/local/bin/yt-dlp
-    - name: Install PyExecJS
-      run: |
-        pip install PyExecJS
-    # - name: Install streamlink
-    #   run: |
-    #     pip install streamlink
+
 #######################################YOUTUBE####################################################   
 #鏡新聞
     - name: Get yt_mnews.m3u8
@@ -181,198 +176,10 @@ jobs:
 #         $(yt-dlp --print urls https://www.youtube.com/watch?v=PpCKwiVHCfY)
 #         EOL
 
-############################################################################################################
-############################################bilbil##############################################################
-# #蠟筆小新1s
-#     - name: Get bilbil_Crayon_Shinchan1.m3u8
-#       run: |
-#         touch ./bilbil_Crayon_Shinchan1.m3u8
-#         sudo cat >./bilbil_Crayon_Shinchan1.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(streamlink --default-stream best --stream-url https://live.bilibili.com/26329057)
-#         EOL
-# #蠟筆小新1
-#     - name: Get bilbil_Crayon_Shinchan1.m3u8
-#       run: |
-#         touch ./bilbil_Crayon_Shinchan1.m3u8
-#         sudo cat >./bilbil_Crayon_Shinchan1.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 26329057)
-#         EOL
-# #蠟筆小新2
-#     - name: Get bilbil_Crayon_Shinchan2.m3u8
-#       run: |
-#         touch ./bilbil_Crayon_Shinchan2.m3u8
-#         sudo cat >./bilbil_Crayon_Shinchan2.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 10375360)
-#         EOL
-# #蠟筆小新3
-#     - name: Get bilbil_Crayon_Shinchan3.m3u8
-#       run: |
-#         touch ./bilbil_Crayon_Shinchan3.m3u8
-#         sudo cat >./bilbil_Crayon_Shinchan3.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 26706595)
-#         EOL
-# #蠟筆小新4
-#     - name: Get bilbil_Crayon_Shinchan4.m3u8
-#       run: |
-#         touch ./bilbil_Crayon_Shinchan4.m3u8
-#         sudo cat >./bilbil_Crayon_Shinchan4.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 27178028)
-#         EOL
-# #名偵探柯南
-#     - name: Get bilbil_Conan.m3u8
-#       run: |
-#         touch ./bilbil_Conan.m3u8
-#         sudo cat >./bilbil_Conan.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 181453)
-#         EOL
-# #小新多拉A夢小丸子柯南
-#     - name: Get bilbil_more_TV_24.m3u8
-#       run: |
-#         touch ./bilbil_more_TV_24.m3u8
-#         sudo cat >./bilbil_more_TV_24.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 21557299)
-#         EOL
-# #多拉A夢1
-#     - name: Get bilbil_Doraemon1.m3u8
-#       run: |
-#         touch ./bilbil_Doraemon1.m3u8
-#         sudo cat >./bilbil_Doraemon1.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 14745943)
-#         EOL
-# #多拉A夢2
-#     - name: Get bilbil_Doraemon2.m3u8
-#       run: |
-#         touch ./bilbil_Doraemon2.m3u8
-#         sudo cat >./bilbil_Doraemon2.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 27383329)
-#         EOL
-# #多拉A夢3
-#     - name: Get bilbil_Doraemon3.m3u8
-#       run: |
-#         touch ./bilbil_Doraemon3.m3u8
-#         sudo cat >./bilbil_Doraemon3.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./bilibili.py 27311355)
-#         EOL
+########################################YOUTUBE#################################################### 
 
 
 
-
-# ############################################################################################################
-# ############################################huya虎牙##############################################################
-# #海蓮寶寶1
-#     - name: Get huya_spongebob1.m3u8
-#       run: |
-#         touch ./huya_spongebob1.m3u8
-#         sudo cat >./huya_spongebob1.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./huya.py 20301656)
-#         EOL
-# #海蓮寶寶1
-#     - name: Get huya_spongebob2.m3u8
-#       run: |
-#         touch ./huya_spongebob2.m3u8
-#         sudo cat >./huya_spongebob2.m3u8 <<EOL
-#         #EXTM3U
-#         #EXT-X-VERSION:3
-#         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-#         $(python3 ./huya.py 19552901)
-#         EOL
-
-
-
-
-
-
-
-
-
-
-
-############################################################################################################
-############################################Douyu鬥魚##############################################################
-#名偵探柯南1
-    - name: Get douyu_Conan1.m3u8
-      run: |
-        touch ./douyu_Conan1.m3u8
-        sudo cat >./douyu_Conan1.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./douyu.py 6484910)
-        EOL
-#名偵探柯南2
-    - name: Get douyu_Conan2.m3u8
-      run: |
-        touch ./douyu_Conan2.m3u8
-        sudo cat >./douyu_Conan2.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./douyu.py 1487654)
-        EOL
-#running man1
-    - name: Get douyu_running_man1.m3u8
-      run: |
-        touch ./douyu_running_man1.m3u8
-        sudo cat >./douyu_running_man1.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./douyu.py 131977)
-        EOL
-#running man2
-    - name: Get douyu_running_man2.m3u8
-      run: |
-        touch ./douyu_running_man2.m3u8
-        sudo cat >./douyu_running_man2.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(python3 ./douyu.py 7298973)
-        EOL
-
-
-
-
-
-
-
-
-
-
-############################################################################################################
     - name: git add
       run: |
         git add -A
